fix input field and add fodd from store

--- a/public/assets/scss/layout/_dasboard.scss
+++ b/public/assets/scss/layout/_dasboard.scss
@@ -4,6 +4,12 @@
         background-color: white;
     }
     .wrap-board{
-        
+        .title{
+            font-size: 20px;
+            margin: 30px;
+        }
+        .food-control{
+            
+        }
     }
 }   
