--- a/public/assets/scss/layout/_dasboard.scss
+++ b/public/assets/scss/layout/_dasboard.scss
@@ -12,4 +12,9 @@
             
         }
     }
+    @include media-breakpoint-down(lg){
+        .wrap-nav-menu{
+            width: 100%;
+        }
+    }
 }   
