--- a/public/assets/scss/layout/_reset.scss
+++ b/public/assets/scss/layout/_reset.scss
@@ -27,6 +27,17 @@ main{
 
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 
 
 @include media-breakpoint-down(lg){
