--- a/public/assets/scss/layout/_error.scss
+++ b/public/assets/scss/layout/_error.scss
@@ -1,6 +1,7 @@
 .error-wrapper{
     padding: 100px;
     text-align: center;
+    width: 100%;
     h2{
         font-size: 20px;
         line-height: 1.6;
